# efr32-pacs

./: .gitignore  Cargo.toml  readme.md
pacs/efr32fg23/: Cargo.toml  device.x
pacs/efr32fg23/src/: acmp0_ns.rs  cmu_s.rs  dcdc_ns.rs  devinfo.rs  emu_ns.rs  eusart0_s.rs  eusart2_s.rs  gpcrc_ns.rs  gpio_ns.rs  hfrco0_s.rs  hfxo0_ns.rs  i2c0_s.rs  keyscan_s.rs  lcd_ns.rs  lcdrf_ns.rs  ldma_s.rs  ldmaxbar_ns.rs  lesense_ns.rs  letimer0_ns.rs  lfrco_ns.rs  lfxo_s.rs  lib.rs  msc_s.rs  prs_s.rs  semailbox_s_host.rs  syscfg_s_cfgns.rs  sysrtc0_s.rs  timer0_ns.rs  usart0_s.rs
pacs/efr32fg23/src/acmp1_ns/: ipversion.rs  syncbusy.rs
pacs/efr32fg23/src/acmp1_s/: inputctrl.rs
pacs/efr32fg23/src/buram_ns/: ret0_reg.rs  ret12_reg.rs  ret15_reg.rs  ret22_reg.rs  ret27_reg.rs  ret3_reg.rs  ret6_reg.rs
pacs/efr32fg23/src/buram_s/: ret11_reg.rs  ret21_reg.rs  ret26_reg.rs  ret29_reg.rs  ret2_reg.rs  ret30_reg.rs
pacs/efr32fg23/src/burtc_ns/: en.rs  lock.rs  precnt.rs
pacs/efr32fg23/src/burtc_s/: ien.rs
pacs/efr32fg23/src/cmu_ns/: calcnt.rs  calctrl.rs  clken1.rs  em01grpcclkctrl.rs  em4grpaclkctrl.rs  lock.rs  radioclkctrl.rs  status.rs  sysrtc0clkctrl.rs  wdog0clkctrl.rs  wdog1clkctrl.rs
pacs/efr32fg23/src/cmu_s/: clken0.rs  exportclkctrl.rs  ien.rs  ipversion.rs  lcdclkctrl.rs  lesensehfclkctrl.rs  sysclkctrl.rs  traceclkctrl.rs
pacs/efr32fg23/src/dcdc_ns/: ctrl.rs  em01ctrl0.rs  em23ctrl0.rs  ien.rs
pacs/efr32fg23/src/dcdc_s/: pfmxctrl.rs  status.rs
pacs/efr32fg23/src/devinfo/: custominfo.rs  eui48l.rs  eui64h.rs  extinfo.rs  hfrcodpllcal10.rs  hfrcodpllcal13.rs  (+34 more)
(+12680 files in other folders)
