[package]
name = "efr32fg23-pac"
keywords.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
cortex-m.workspace = true
vcell.workspace = true

[dependencies.cortex-m-rt]
optional = true
workspace = true

[dependencies.critical-section]
optional = true
workspace = true

[features]
rt = ["cortex-m-rt/device"]
cs = ["critical-section"]
lcd = []
